Fixes scrollbar on jstree in record view

--- a/themes/sbvfrd/less/sbvfrd.less
+++ b/themes/sbvfrd/less/sbvfrd.less
@@ -1594,6 +1594,7 @@ footer {
 
 #hierarchyTreeHolder {
   border: none;
+  overflow: hidden;
 
   .form-control {
     margin: 10px 0;
@@ -1738,7 +1739,7 @@ footer {
 }
 
 #treeSearch {
-  margin: 10px 0 20px 0;
+  margin: 10px 0;
 }
 
 .nav.nav-tabs.jus {
